# simd_bench

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
simd_bench/: CMakeLists.txt  main.cpp
simd_bench/clamp/: clamp_avx.h  clamp_bench.h  clamp_scalar.h  clamp_sse.h
simd_bench/util/: buff_utils.h  defs.h  f32_buff_utils.h
